--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,4 +1,7 @@
 $main-font: Roboto;
-$main-color: #1A1D20;
+$main-color: #1A1D20; 
 $light-background: #EDEAE5;
+$light-text: #F8F8F8;
 $active-color: #DF5EFF;
+$hover-button-color: #C507F4;
+$secondary-color: #495057;
