--- a/src/components/Footer/ShopWineFooter.module.scss
+++ b/src/components/Footer/ShopWineFooter.module.scss
@@ -5,7 +5,7 @@
   background-color: $light-background;
   height: 110px;
   border-top: 1px solid black;
-  position: fixed;
+  position: static;
   bottom: 0;
   width: 100%;
   color: $secondary-color;
