--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -5,3 +5,6 @@ $light-text: #F8F8F8;
 $active-color: #DF5EFF;
 $hover-button-color: #C507F4;
 $secondary-color: #495057;
+$ligth-2-background: #F5F5FE;
+$age-icon: #FF3A3A;
+$white-color: white;
